<resources>
    <string name="app_name">Galactica</string>
    <string name="back_button">Zurück</string>
    <string name="settings_button">Einstellungen</string>
    <string name="multiplayer_button">Mehrspieler</string>
    <string name="singleplayer_button">Einzelspieler</string>
    <string name="custom_game">Freies Spiel</string>
    <string name="campagne_button">Kampagne</string>
    <string name="start_game_button">Start Game</string>
    <string name="placeholder">N/A</string>
    <string name="x_moves_left">Noch %1$d Feldaufdeckung/en!</string>
    <string name="score">Score: %1$d/%2$d!</string>
    <string name="y_von_z_planeten_gefunden">%1$d von %2$d Planeten gefunden!</string>
    <string name="flag_mode">Markieren</string>
    <string name="single_win_title">Gewonnen!</string>
    <string name="single_win_description">Sie haben das Spiel in %1$d Feldaufdeckungen gewonnen!</string>
    <string name="single_lose_title">Verloren!</string>
    <string name="single_lose_description">Sie haben das Spiel leider nicht gewonnen.</string>
    <string name="pause">PAUSE</string>
    <string name="single_game_end_button_text">Beenden</string>
    <string name="single_player_pause_reset_text">Neustart</string>
    <string name="single_player_retry_level">Erneut Spielen</string>
    <string name="single_player_resume_button">Weiterspielen</string>
    <string name="reveal_flagged_prompt">Willst du das markierte Feld wirklich aufdecken?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="subtitle">Subtitel</string>
    <string name="host_game_button">Spiel Hosten</string>
    <string name="join_game_button">Spiel Beitreten</string>
    <string name="wait_for_host_text">Warten auf den Host...</string>
    <string name="loading">Loading...</string>
    <string name="separator">|</string>
    <string name="multiplayer_my_planets_found">Planeten gefunden: %1$d/%2$d</string>
    <string name="host" translatable="false">Host</string>
    <string name="client" translatable="false">Client</string>
    <string name="multiplayer_enemy_planets_found">(Gegner: %1$d/%2$d)</string>
    <string name="my_turn">Am Zug!</string>
    <string name="my_turn_again">Nochmal am Zug!</string>
    <string name="not_my_turn">Der andere Spieler ist am Zug!</string>
    <string name="joining">Laden...</string>
    <string name="multi_player_resume_button">Weiterspielen</string>
    <string name="multi_game_end_button_text">Beenden</string>
    <string name="multi_win_title">Gewonnen!</string>
    <string name="multi_win_description">Tja, da wird sich Ihr/e Gegner/in wohl ärgern...</string>
    <string name="multi_player_retry_level">Erneut Spielen</string>
    <string name="multi_lose_description">Arg... Das ist aber ärgerlich!</string>
    <string name="multi_lose_title">Verloren!</string>
    <string name="items">Items:</string>
    <string name="single_player_view">Spielfeld anschauen</string>
    <string name="multi_player_view">Spielfeld betrachten</string>
    <string name="daily_challenge">Tägliche Herausforderung</string>
    <string name="daily_already_played">Du hast die tägliche Herausforderung heute bereits gespielt!</string>
    <string name="daily_share_results">Ergebnisse teilen!</string>
    <string name="volume_label">Lautstärke:</string>
    <string name="hint_multiplayer">Achtung: Es kann notwendig sein, dass die beiden Geräte vorher per Bluetooth verbunden wurde.</string>
    <string name="tutorial">Tutorial</string>
    <string name="next">Weiter</string>

</resources>
