<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultiPlayerActivity">

    <de.mstrauss.galactica.ui.StarfieldBackgroundView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|center"
        android:orientation="horizontal"
        android:background="@drawable/bg">
    </de.mstrauss.galactica.ui.StarfieldBackgroundView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent_space_glow"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/role_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="Client"
                    android:gravity="start|center"
                    android:textColor="@color/space_glow" />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:textAlignment="center"
                    android:text="|">
                </TextView>
                <TextView
                    android:id="@+id/game_state"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/joining"
                    android:gravity="start|center"
                    android:textColor="@color/space_glow" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/my_planets"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/multiplayer_my_planets_found"
                    android:gravity="start|center"
                    android:textColor="@color/space_glow" />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:textAlignment="center"
                    android:text="@string/separator">
                </TextView>

                <TextView
                    android:id="@+id/enemies_planets"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/multiplayer_enemy_planets_found"
                    android:gravity="start|center"
                    android:textColor="@color/space_glow" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center|center"
                android:weightSum="2"
                >
                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">
                </Space>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/multiplayer_flagging_toggle"
                    style="@style/GalacticaButton.Danger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:letterSpacing="0"
                    android:minWidth="0dp"
                    android:padding="7dp"
                    android:text="@string/flag_mode"
                    android:textColor="@color/flag_button_text"
                    app:backgroundTint="@color/flag_button_bg"
                    app:icon="@drawable/_icon_flagtriangleright"
                    app:iconPadding="4dp"
                    app:iconSize="18dp"
                    app:iconTint="@color/flag_button_text"
                    app:strokeColor="@color/flag_button_stroke" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">
                </Space>

                <Button
                    android:id="@+id/pause_button"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginHorizontal="0dp"
                    android:backgroundTint="@color/space_blue"
                    android:letterSpacing="0"
                    android:minWidth="0dp"
                    android:padding="7dp"
                    app:icon="@drawable/_icon_pause"
                    app:iconPadding="0dp"
                    app:iconSize="18dp" />
            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1">

            <de.mstrauss.galactica.game.GridLinesOverlayView
                android:id="@+id/multiplayer_grid_overlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp" />

            <GridLayout
                android:id="@+id/multiplayer_grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="7"
                android:orientation="horizontal"
                android:padding="10dp"
                android:rowCount="8" />
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>