<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/menu_left_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|start"
        android:orientation="vertical"
        android:padding="10pt">

        <TextView
            android:id="@+id/gametitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/app_name"
            android:textSize="28pt"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:foregroundGravity="center_vertical">

            <!-- child view -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minWidth="100pt"
                    android:background="@color/transparent_space_glow"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_marginHorizontal="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Level 1"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1">
                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magaccusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet">
                    </TextView>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                    />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Spielen!">
                    </Button>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minWidth="100pt"
                    android:background="@color/transparent_space_glow"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_marginHorizontal="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Level 1"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1">
                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magaccusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet">
                    </TextView>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Spielen!">
                    </Button>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minWidth="100pt"
                    android:background="@color/transparent_space_glow"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_marginHorizontal="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Level 1"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1">
                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magaccusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet">
                    </TextView>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Spielen!">
                    </Button>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minWidth="100pt"
                    android:background="@color/transparent_space_glow"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_marginHorizontal="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Level 1"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1">
                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magaccusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet">
                    </TextView>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Spielen!">
                    </Button>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minWidth="100pt"
                    android:background="@color/transparent_space_glow"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_marginHorizontal="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Level 1"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1">
                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magaccusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet">
                    </TextView>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Spielen!">
                    </Button>
                </LinearLayout>

            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/single_player_playground_setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical">

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></androidx.appcompat.widget.SwitchCompat>
            </LinearLayout>

            <Button
                android:id="@+id/start_single_player_game_button"
                style="@android:style/Widget.Material.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_game_button"></Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_menu_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:orientation="vertical"
            android:padding="10pt"
            android:visibility="gone">

            <Button
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/single_menu_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:orientation="vertical"
            android:padding="10pt"
            android:visibility="gone">

            <Button
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/campagne_button" />

            <Button
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/single_player_playground_button"
                android:text="@string/custom_game" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/multi_menu_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:orientation="vertical"
            android:padding="10pt"
            android:visibility="gone">

            <Button
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:orientation="vertical"
            android:padding="10pt"
            android:visibility="gone">

            <Button
                android:id="@+id/menu_singleplayer_button"
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/singleplayer_button" />

            <Button
                android:id="@+id/menu_multiplayer_button"
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multiplayer_button" />

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/menu_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5pt"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/menu_settings_button_inner"
            style="@android:style/Widget.Material.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_button" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/menu_back_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|top"
        android:orientation="vertical"
        android:padding="5pt"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/menu_back_button_inner"
            style="@android:style/Widget.Material.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
